fix bug not showing input in login

--- a/src/client/src/pages/planForm/planForm.css
+++ b/src/client/src/pages/planForm/planForm.css
@@ -89,7 +89,7 @@ li {
     height: 100px;
 }
 
-input{
+.input{
     display: none;
 }
 
